# Group_project

./: CMakeLists.txt  Camera.cpp  Camera.h  Filter.cpp  Filter.h  Mediapipe-installation-README.md  Photos.cpp  Photos.h  README.md  helloworld.cpp  imageExport.h  imageToMat.cpp  imageToQImage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  readme_2.txt  vcpkg.json
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
